Configure Tests.
